tests/scan/fixtures/validation/negative/clean_go_clean-signal-handler/clean-signal-handler.go
// Package clean-signal-handler is a clean Go module.
package clean-signal-handler

func Hello() string { return "hello" }
